Added many things

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+	    <dependency>
+	        <groupId>com.sun.mail</groupId>
+	        <artifactId>javax.mail</artifactId>
+	        <version>1.6.2</version>
+	    </dependency>
+
 	</dependencies>
 
 	<build>
